<resources>
    <string name="app_name">CSDNPLUS</string>

    <string name="exception_message_generic">哎唷，出错了(⊙︿⊙)</string>
    <string name="exception_message_no_connection">网络连接失败，你这渣渣网速￣へ￣</string>
    <string name="exception_message_not_found">资源未找到(๑ŐдŐ)b</string>

    <string name="csdn">CSDN</string>
    <string name="slogan">Technology Connects Us</string>
    <string name="title_detail">详情</string>
    <string name="topic_desc" formatted="false">更多%s话题：%d篇</string>

    <string name="expired_auto_login">过期了，自动登录中(*＾-＾*)</string>
    <string name="login_hint_account">帐号</string>
    <string name="login_hint_password">密码</string>
    <string name="login_btn_text_normal">登录</string>
    <string name="login_btn_text_error">登录失败=_=</string>
    <string name="login_btn_text_progress">登录中…(＾－＾)</string>
    <string name="login_btn_text_success">登录成功\(^o^)/</string>
    <string name="night_mode">夜间模式</string>
    <string name="geeknews">头条</string>

</resources>
