<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/login_logo_iv"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/login_logo"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_account_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/login_hint_account"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/font_large"
        app:met_baseColor="@color/black"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:textSize="@dimen/font_large"
        app:met_baseColor="@color/black"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/login_btn_text_normal"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:pb_colorComplete="@color/green_complete"
        app:pb_colorError="@color/red_error"
        app:pb_colorNormal="@color/colorPrimary"
        app:pb_colorPressed="@color/colorPrimaryDark"
        app:pb_colorProgress="@color/purple_progress"
        app:pb_textComplete="@string/login_btn_text_success"
        app:pb_textError="@string/login_btn_text_error"
        app:pb_textProgress="@string/login_btn_text_progress"
        />


</LinearLayout>